streamlined logic and removed redundancies since JSON 4 fields are guaranteed